# buddy

./: .gitignore  .mcp.json  DEVELOPMENT.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
Formula/: buddy.rb  mcp-creature-bot.rb
buddy/: pyproject.toml
buddy/src/buddy/: __init__.py  activity_loop.py  combat.py  leveling.py  pane.py  paths.py  personalities.py  quests.py  server.py  skills.py  species.py  state.py
buddy/src/buddy/commands/: buddy.md
buddy/src/buddy/scripts/: install.py  install_statusline.py  statusline.py  uninstall.py
buddy/src/buddy/sprites/: chick.txt  haast_eagle.txt  squirrel.txt
buddy/src/buddy/sprites/enemies/: cave_angler.txt  forest_wasp.txt
data/sprites/: baby_gecko.txt  bee.txt  brown_rat.txt  carpenter_ant.txt  chipmunk.txt  guppy.txt  hare.txt  hatchling_turtle.txt  josephoartigasia.txt  nightingale.txt  rabbit.txt  skink.txt
hooks/: hooks.json
mcp-creature-bot/: README.md  pyproject.toml
mcp-creature-bot/src/mcp_creature_bot/: server.py  skills.py  species.py
mcp-creature-bot/src/mcp_creature_bot/hooks/: on_prompt.py
mcp-creature-bot/src/mcp_creature_bot/scripts/: install.py
mcp-creature-bot/src/mcp_creature_bot/sprites/: caterpillar.txt  jackrabbit.txt  minnow.txt  snail.txt
server/: combat.py  leveling.py  llm.py  main.py  migrate.py  mini_mcp.py  pane.py  paths.py  quests.py  skills.py  species.py  state.py  statusline.py  tools.py  vignettes.py
server/hooks/: on_session_end.py  on_session_start.py  on_stop.py
skills/allocate/: SKILL.md
skills/claim/: SKILL.md
(+70 files in other folders)
