[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy"
version = "0.3.0"
description = "An RPG buddy for Claude Code — Pokemon-style ASCII companion that gains XP from your prompts."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "mcp>=1.0.0"
]

[project.scripts]
buddy = "buddy.server:main"
buddy-install = "buddy.scripts.install:main"
buddy-uninstall = "buddy.scripts.uninstall:main"
claude-danger-tmux = "buddy.scripts.claude_danger_tmux:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
buddy = ["sprites/*.txt", "commands/*.md"]
