[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-creature-bot"
version = "0.1.0"
description = "An RPG buddy for Claude Code — Pokemon-style ASCII companion that gains XP from your prompts."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "mcp>=1.0.0"
]

[project.scripts]
mcp-creature-bot = "mcp_creature_bot.server:main"
mcp-creature-bot-install = "mcp_creature_bot.scripts.install:main"
mcp-creature-bot-uninstall = "mcp_creature_bot.scripts.uninstall:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_creature_bot = ["sprites/*.txt", "commands/*.md"]
